--- a/playbooks/roles/node-exporter/tasks/uninstall.yml
+++ b/playbooks/roles/node-exporter/tasks/uninstall.yml
@@ -1,3 +1,14 @@
+- name: Stop service node_exporter on debian, if running
+  ansible.builtin.systemd:
+    name: node_exporter
+    state: stopped
+    enabled: no
+
+- name: clean service file
+  file:
+    path: /etc/systemd/system/node_exporter.service
+    state: absent
+
 - name: clean data dirs
   file:
     path: "{{ node_exporter_dir_conf }}"
